--- a/app/src/main/res/layout/fragment_poems_per_category.xml
+++ b/app/src/main/res/layout/fragment_poems_per_category.xml
@@ -13,20 +13,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/general_background"
-        android:gravity="center"
-        android:orientation="vertical"
         tools:context=".ui.home.poemsPerCategoryList.PoemsPerCategoryListFragment">
 
         <include
             android:id="@+id/mergeToolbar"
             layout="@layout/toolbar" />
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
+        <include
             android:id="@+id/loadingView"
+            layout="@layout/reuse_circular_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
             app:layout_constraintBottom_toBottomOf="@id/srlRefreshPoemsPerCategory"
             app:layout_constraintEnd_toEndOf="@id/srlRefreshPoemsPerCategory"
             app:layout_constraintStart_toStartOf="@id/srlRefreshPoemsPerCategory"
