--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.shahar91.poems.ui.add.AddPoemViewModel" />
@@ -15,27 +16,17 @@
         android:layout_height="match_parent"
         tools:context=".ui.add.AddPoemActivity">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/ablAddPoem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:stateListAnimator="@animator/appbar_always_elevated"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <include
-                android:id="@+id/activityToolbar"
-                layout="@layout/toolbar" />
-
-        </com.google.android.material.appbar.AppBarLayout>
+        <include
+            android:id="@+id/activityToolbar"
+            layout="@layout/toolbar" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ablAddPoem">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:ignore="UnknownIdInLayout">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clParent"
@@ -44,9 +35,10 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tilPoemTitle"
-                    style="@style/CommonTextInput"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="12dp"
                     app:layout_constraintTop_toTopOf="parent">
 
@@ -56,16 +48,17 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/add_poem_hint_title"
                         android:inputType="textCapSentences"
-                        android:text="@={viewModel.poemTitle}"
                         android:paddingTop="12dp"
-                        android:paddingBottom="10dp" />
+                        android:paddingBottom="10dp"
+                        android:text="@={viewModel.poemTitle}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tilPoemBody"
-                    style="@style/CommonTextInput"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="18dp"
                     app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">
 
@@ -76,17 +69,18 @@
                         android:gravity="center_horizontal"
                         android:hint="@string/add_poem_hint_body"
                         android:inputType="textMultiLine|textCapSentences"
-                        android:text="@={viewModel.poemBody}"
                         android:minLines="15"
                         android:paddingTop="12dp"
-                        android:paddingBottom="10dp" />
+                        android:paddingBottom="10dp"
+                        android:text="@={viewModel.poemBody}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tilPoemCategory"
-                    style="@style/CommonTextInput"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="24dp"
                     app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
@@ -108,9 +102,9 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnSavePoem"
-                    style="@style/Widget.MaterialComponents.Button.General"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/entry_button_height"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="12dp"
                     android:text="@string/add_poem_button_save"
                     app:layout_constraintBottom_toBottomOf="parent" />
