--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -20,8 +20,7 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:fitsSystemWindows="true">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
@@ -30,34 +29,23 @@
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleGravity="center_vertical"
-                app:expandedTitleTextAppearance="@style/Some">
+                app:expandedTitleTextAppearance="@style/Material.Toolbar.Transparent.ExpandedTitleAppearance">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="240dp"
                     android:fitsSystemWindows="true">
 
-                    <ImageView
-                        android:id="@+id/ivEntryHeader"
-                        android:layout_width="match_parent"
-                        android:layout_height="240dp"
-                        android:scaleType="centerCrop"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/entry_header_back" />
+                    <include layout="@layout/reuse_entry_header" />
 
-                    <TextView
-                        style="@style/EntryHeaderText"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:text="@string/app_name"
-                        app:layout_constraintBottom_toBottomOf="@id/ivEntryHeader"
-                        app:layout_constraintTop_toTopOf="@id/ivEntryHeader" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/tbEntry"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize" />
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@android:color/transparent"
+                    android:elevation="0dp" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
