--- a/app/src/main/res/layout/custom_dialog_add_review.xml
+++ b/app/src/main/res/layout/custom_dialog_add_review.xml
@@ -9,9 +9,8 @@
         style="@style/Widget.MaterialRatingBar.RatingBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="18dp"
         android:numStars="5"
         android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,11 +19,11 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilReviewBody"
-        style="@style/CommonTextInput"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
