--- a/app/src/main/res/layout/custom_no_review.xml
+++ b/app/src/main/res/layout/custom_no_review.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/no_review_rate_poem_title"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textAppearance="?attr/textAppearanceHeadline6"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/no_review_rate_poem_body"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textAppearance="?attr/textAppearanceCaption"
             app:layout_constraintTop_toBottomOf="@id/tvNoReviewTitle" />
 
         <me.zhanghai.android.materialratingbar.MaterialRatingBar
@@ -30,9 +30,8 @@
             style="@style/Widget.MaterialRatingBar.RatingBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
+            android:layout_marginHorizontal="18dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="18dp"
             android:stepSize="1"
             android:numStars="5"
             app:layout_constraintBottom_toBottomOf="parent"
