--- a/app/src/main/res/layout/custom_review_header.xml
+++ b/app/src/main/res/layout/custom_review_header.xml
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+        android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintBottom_toBottomOf="@id/ivUserImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ivUserImage"
@@ -39,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+        android:textAppearance="?attr/textAppearanceCaption"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/rbOwnRating"
         app:layout_constraintEnd_toEndOf="parent"
