--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -12,23 +12,17 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="6dp"
-        android:background="?android:attr/selectableItemBackground"
+        android:layout_marginHorizontal="14dp"
+        android:layout_marginVertical="6dp"
         android:clickable="true"
         android:focusable="true"
-        tools:showIn="@layout/fragment_categories"
-        app:cardBackgroundColor="@color/colorWhite">
+        tools:showIn="@layout/fragment_categories">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingTop="6dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="6dp">
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="6dp">
 
             <TextView
                 android:id="@+id/categoryTv"
@@ -42,7 +36,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Beauty" />
+                tools:text="@sample/categories.txt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
