--- a/app/src/main/res/layout/list_item_global_rating.xml
+++ b/app/src/main/res/layout/list_item_global_rating.xml
@@ -37,10 +37,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginHorizontal="14dp"
+        android:layout_marginVertical="12dp"
         tools:context=".ui.home.poem.PoemFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +54,7 @@
                 android:layout_marginTop="4dp"
                 android:gravity="center"
                 android:text='@{String.format("%.1f", averageRating)}'
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
+                android:textAppearance="?attr/textAppearanceHeadline3"
                 android:textColor="@color/colorBlack_1000"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -70,15 +68,14 @@
                 android:rating="@{averageRating}"
                 app:layout_constraintEnd_toEndOf="@id/tvAverageRating"
                 app:layout_constraintStart_toStartOf="@id/tvAverageRating"
-                app:layout_constraintTop_toBottomOf="@id/tvAverageRating"
-                app:layout_constraintVertical_bias="0.333" />
+                app:layout_constraintTop_toBottomOf="@id/tvAverageRating" />
 
             <TextView
                 android:id="@+id/tvTotalReviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{totalRating.toString()}"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                android:textAppearance="?attr/textAppearanceCaption"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/rbTotalRating"
                 app:layout_constraintStart_toStartOf="@id/rbTotalRating"
@@ -94,12 +91,8 @@
 
             <TextView
                 android:id="@+id/tvFiveStarRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="9dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global.Label"
                 android:text="@string/global_rating_label_five"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/pbFiveStarRating"
                 app:layout_constraintEnd_toStartOf="@id/pbFiveStarRating"
                 app:layout_constraintStart_toEndOf="@id/guideline"
@@ -107,10 +100,7 @@
 
             <ProgressBar
                 android:id="@+id/pbFiveStarRating"
-                style="@style/MyProgressBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global"
                 android:max="@{totalRating}"
                 android:progress="@{fiveStarRating}"
                 app:layout_constraintBottom_toTopOf="@id/pbFourStarRating"
@@ -121,12 +111,8 @@
 
             <TextView
                 android:id="@+id/tvFourStarRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="9dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global.Label"
                 android:text="@string/global_rating_label_four"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/pbFourStarRating"
                 app:layout_constraintEnd_toStartOf="@id/pbFourStarRating"
                 app:layout_constraintStart_toEndOf="@id/guideline"
@@ -134,12 +120,9 @@
 
             <ProgressBar
                 android:id="@+id/pbFourStarRating"
-                style="@style/MyProgressBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:progress="@{fourStarRating}"
+                style="@style/ProgressBar.Horizontal.Rating.Global"
                 android:max="@{totalRating}"
+                android:progress="@{fourStarRating}"
                 app:layout_constraintBottom_toTopOf="@id/pbThreeStarRating"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvFourStarRating"
@@ -148,12 +131,8 @@
 
             <TextView
                 android:id="@+id/tvThreeStarRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="9dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global.Label"
                 android:text="@string/global_rating_label_three"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/pbThreeStarRating"
                 app:layout_constraintEnd_toStartOf="@id/pbThreeStarRating"
                 app:layout_constraintStart_toEndOf="@id/guideline"
@@ -161,12 +140,9 @@
 
             <ProgressBar
                 android:id="@+id/pbThreeStarRating"
-                style="@style/MyProgressBar"
-                android:layout_width="0dp"
-                android:progress="@{threeStarRating}"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global"
                 android:max="@{totalRating}"
+                android:progress="@{threeStarRating}"
                 app:layout_constraintBottom_toTopOf="@id/pbTwoStarRating"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvThreeStarRating"
@@ -175,12 +151,8 @@
 
             <TextView
                 android:id="@+id/tvTwoStarRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="9dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global.Label"
                 android:text="@string/global_rating_label_two"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/pbTwoStarRating"
                 app:layout_constraintEnd_toStartOf="@id/pbTwoStarRating"
                 app:layout_constraintStart_toEndOf="@id/guideline"
@@ -188,12 +160,9 @@
 
             <ProgressBar
                 android:id="@+id/pbTwoStarRating"
-                style="@style/MyProgressBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:progress="@{twoStarRating}"
+                style="@style/ProgressBar.Horizontal.Rating.Global"
                 android:max="@{totalRating}"
+                android:progress="@{twoStarRating}"
                 app:layout_constraintBottom_toTopOf="@id/pbOneStarRating"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvTwoStarRating"
@@ -202,12 +171,8 @@
 
             <TextView
                 android:id="@+id/tvOneStarRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="9dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global.Label"
                 android:text="@string/global_rating_label_one"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/pbOneStarRating"
                 app:layout_constraintEnd_toStartOf="@id/pbOneStarRating"
                 app:layout_constraintStart_toEndOf="@id/guideline"
@@ -215,12 +180,9 @@
 
             <ProgressBar
                 android:id="@+id/pbOneStarRating"
-                style="@style/MyProgressBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:progress="@{oneStarRating}"
-                android:layout_marginEnd="12dp"
+                style="@style/ProgressBar.Horizontal.Rating.Global"
                 android:max="@{totalRating}"
+                android:progress="@{oneStarRating}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvOneStarRating"
