--- a/app/src/main/res/layout/list_item_poem_per_category.xml
+++ b/app/src/main/res/layout/list_item_poem_per_category.xml
@@ -13,24 +13,18 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="6dp"
-        android:background="?android:attr/selectableItemBackground"
+        android:layout_marginHorizontal="14dp"
+        android:layout_marginVertical="6dp"
         android:clickable="true"
         android:focusable="true"
-        app:cardBackgroundColor="@color/colorWhite"
         tools:showIn="@layout/fragment_poems_per_category">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingStart="8dp"
-            android:paddingTop="6dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="6dp">
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginVertical="6dp">
 
             <TextView
                 android:id="@+id/titleTv"
@@ -39,9 +33,10 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{poemWithUser.poem.title}"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                tools:text="Some Title" />
+                android:textAppearance="?attr/textAppearanceSubtitle1"
+                tools:text="@sample/poems.json/data/title" />
 
+            <!-- TODO: extract the textAppearance here!!!-->
             <TextView
                 android:id="@+id/writerTv"
                 android:layout_width="match_parent"
@@ -51,7 +46,7 @@
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body3"
                 android:textColor="?android:textColorSecondary"
                 android:text="@{poemWithUser.user.username}"
-                tools:text="Some Writer" />
+                tools:text="@sample/poems.json/data/writer" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
