--- a/app/src/main/res/layout/reuse_poem_detail.xml
+++ b/app/src/main/res/layout/reuse_poem_detail.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="title"
             type="String" />
+
         <variable
             name="poem"
             type="String" />
+
         <variable
             name="author"
             type="String" />
@@ -18,69 +21,46 @@
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginHorizontal="14dp"
+        android:layout_marginVertical="12dp"
         tools:context=".ui.home.poem.PoemFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="16dp"
             android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvPoemTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="20dp"
                 android:gravity="center_horizontal"
                 android:text="@{title}"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                tools:text="Poem Title" />
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                tools:text="@sample/poems.json/data/title" />
 
             <TextView
                 android:id="@+id/tvPoem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginEnd="20dp"
                 android:gravity="center_horizontal"
                 android:text="@{poem}"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                android:textAppearance="?attr/textAppearanceBody2"
                 android:textColor="?android:textColorSecondary"
-                tools:text="hello category category category category category category\ncategory category category category category category\ncategory category category category category category category\ncategory category category category category\ncategory category category category \ncategory category category category category \ncategory category category category category \ncategory category category category category \ncategory category category category \ncategory category category category category \ncategory category category category category \ncategory category category category category category category category category category " />
+                tools:text="@sample/poems.json/data/body" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvWriterPoemDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="16dp"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/poem_detail_label_writer"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
-
-                <TextView
-                    android:id="@+id/tvWriterPoemDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{author}"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                    tools:text="Christiano" />
-            </LinearLayout>
+                android:text="@{String.format(@string/poem_detail_label_writer, author)}"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                tools:text="Written by: Someone" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
