--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -103,7 +103,7 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnSavePoem"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/entry_button_height"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="12dp"
                     android:text="@string/add_poem_button_save"
