--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,7 +60,7 @@
             android:id="@+id/btnLogin"
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/entry_button_height"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/entry_button_login"
             app:layout_constraintTop_toBottomOf="@id/tilPassword" />
