--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="category"
-            type="com.shahar91.poems.data.models.Category"/>
+            type="com.shahar91.poems.data.models.Category" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -14,30 +15,19 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="14dp"
         android:layout_marginVertical="6dp"
-        android:clickable="true"
-        android:focusable="true"
         tools:showIn="@layout/fragment_categories">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/categoryTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:paddingHorizontal="8dp"
-            android:paddingVertical="6dp">
-
-            <TextView
-                android:id="@+id/categoryTv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:maxLines="1"
-                android:text="@{category.name}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@sample/categories.txt" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:paddingVertical="6dp"
+            android:text="@{category.name}"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            tools:text="@sample/categories.txt" />
     </com.google.android.material.card.MaterialCardView>
 </layout>
 
