--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="reviewWithUser"
             type="com.shahar91.poems.data.models.ReviewWithUser" />
@@ -12,51 +13,42 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
+        android:layout_marginHorizontal="14dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="14dp"
-        android:orientation="vertical"
-        app:cardBackgroundColor="@color/colorWhite">
+        android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp">
+            android:layout_margin="12dp"
+            android:orientation="vertical">
 
             <com.shahar91.poems.ui.custom.ReviewHeader
                 android:id="@+id/rhUserHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                app:userName="@{reviewWithUser.user.username}"
                 app:rating="@{reviewWithUser.review.rating}"
                 app:reviewTimestamp="@{reviewWithUser.review.getRelativeCreatedDate()}"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:userName="@{reviewWithUser.user.username}"
+                app:imageUrl="@{reviewWithUser.user.pictureSomething}"/>
 
             <TextView
                 android:id="@+id/tvReviewBody"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@{reviewWithUser.review.text}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rhUserHeader"
                 tools:text="No idea. Just do what I do: hold tight and pretend it's a plan. Yes, well, it's a brilliant noise. I love that noise. There are fixed points throughout time where things must stay exactly the way they are. This ..." />
+        </LinearLayout>
 
-            <ImageView
-                android:id="@+id/ivReviewMenu"
-                android:layout_width="28dp"
-                android:layout_height="34dp"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="0dp"
-                android:scaleType="center"
-                android:src="@drawable/ic_overflow"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ivReviewMenu"
+            android:layout_width="28dp"
+            android:layout_height="34dp"
+            android:layout_gravity="end|top"
+            android:padding="0dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_overflow" />
     </com.google.android.material.card.MaterialCardView>
 </layout>
