Updating all things regarding the dependencies. Also updated AndroidCore and fixed every breaking changes

--- a/app/src/main/res/layout/fragment_poems_per_category.xml
+++ b/app/src/main/res/layout/fragment_poems_per_category.xml
@@ -50,7 +50,7 @@
             app:refreshing="@{viewModel.isRefreshing}"
             tools:ignore="UnknownIdInLayout">
 
-            <be.appwise.core.ui.custom.RecyclerViewEmptyLoadingSupport
+            <be.appwise.emptyRecyclerView.ViewStateRecyclerView
                 android:id="@+id/rvPoemsPerCategory"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
