--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -38,7 +38,7 @@
     <fragment
         android:id="@+id/poemFragment"
         android:name="com.shahar91.poems.ui.home.poem.PoemFragment"
-        android:label="fragment_poem"
+        android:label=" "
         tools:layout="@layout/fragment_poem">
 
         <argument
